<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:layout_gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/automatic_loading"
        android:layout_weight="0.8"
        android:textAppearance="?android:attr/textAppearanceLarge" />

        <CheckBox
            android:id="@+id/rate_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           />
    </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dollar_rate"

            android:textAppearance="?android:attr/textAppearanceLarge" />
        <EditText
            android:id="@+id/USD_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/value_rate"
            android:inputType="numberDecimal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/euro_rate"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <EditText
            android:id="@+id/EUR_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/value_rate"
            android:inputType="numberDecimal"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>